# arborist

./: .clinerules  .gitlint  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pr-checks.yml  release.yml  test.yml  version.yml
scripts/: install-dev.sh
src/arborist/: __init__.py  cli.py  git.py
tests/: conftest.py  test_branch_status.py  test_install_dev.py  test_integration.py
