[project]
name = "arborist"
version = "0.1.0"
description = "A focused git branch cleanup tool"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "gitpython>=3.1.44",
    "rich>=13.9.4",
    "typer>=0.15.1",
]
requires-python = ">=3.9"

[project.scripts]
arb = "arborist.cli:app"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/arborist"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
